--- a/tinker/e_announcements/templates/E_annz_search_results.html
+++ b/tinker/e_announcements/templates/E_annz_search_results.html
@@ -1,3 +1,4 @@
+{#This template is to append the resulting search results in the div below the search parameters div#}
 <div class="content">
     <div class="container-fluid">
         <div class="col-md-12">
