--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -77,6 +77,11 @@
                                     {%  endif %}
                                 {% endfor %}
                             </select>
+                        <p class="description">Click "Slide Down" button for additional search parameters.
+                            Press "Slide Up" to hide selection</p>
+                        <button class="s-up">Slide Up</button>
+                        <button class="s-down">Slide Down</button>
+                        <div id="additional-search-params" style="display: none;">
                             <p class="description"> The below are optional parameters to help in your search.</p>
                             <div></div>
                                 <small>Used by entering in part of a name, for example "scho" will select events with
@@ -90,8 +95,9 @@
                                     <input id="startDate" class='datepicker' size='11'/>
                                 <label for="endDate">End Date:</label>
                                     <input id="endDate" class='datepicker' size='11'/>
-                                <a type="submit" id="event-submit-btn" class="btn btn-primary search-events">Search</a>
                             </div>
+                        </div>
+                        <a type="submit" id="event-submit-btn" class="btn btn-primary search-events">Search</a>
                         {# spinner placeholder #}
                         <div id="spinner" class="spinner" style="display:none;">
                             <img id="img-spinner" src="https://cdn1.bethel.edu/images/load.gif" alt="Loading"/>
@@ -205,6 +211,14 @@
                 }
             });
         }
+        $(document).ready(function(){
+                $(".s-up").click(function(){
+                    $("#additional-search-params").slideUp();
+                });
+                $(".s-down").click(function(){
+                    $("#additional-search-params").slideDown();
+                });
+            });
         $(".search-events").click(function () {
             search_events();
         });
