--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -11,6 +11,16 @@
                 </button>
                 <label class="navbar-brand">{{ title }}</label>
             </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/logout">
+                            <i class="fa ti-power-off"></i>
+                            <p>Logout</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
