--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -14,7 +14,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="btn" href="/logout">
+                        <a class="btn" href="{{ url_for('logout') }}">
                             <i class="fa ti-power-off"></i>
                             <p>Logout</p>
                         </a>
