--- a/tinker/templates/profile.html
+++ b/tinker/templates/profile.html
@@ -2,8 +2,37 @@
 
 {% set title = 'Profile' %}
 
+{% block styles %}
+    <style type="text/css">
+
+    </style>
+{% endblock %}
+
 {% block main_content %}
     <div class="content">
-
+        <div class="container-fluid">
+            <div class="col-md-12">
+                <h2>{{ session['name'] }}</h2>
+                    <hr>
+                <table>
+                    <tr>
+                        <th>Username:</th>
+                        <td>{{ session['username'] }}</td>
+                    </tr>
+                    <tr>
+                        <th>Email:</th>
+                        <td>{{ session['user_email'] }}</td>
+                    </tr>
+                    <tr>
+                        <th>Roles:</th>
+                        <td>{{ session['roles'] }}</td>
+                    </tr>
+                    <tr>
+                        <th>Groups:</th>
+                        <td>{{ session['groups'] }}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
