Added "View E-Announcements" Button

--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -21,6 +21,7 @@
                 <a href="{{ url_for('e_announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">Submit
                     New
                     E-Announcement</a>
+                <a href="{{  TODO }}" class="btn btn-primary new-btn">View E-Announcements</a>
 
                 {% for form in forms %}
                     <div class="card">
