--- a/tinker/e_announcements/templates/ea-future.html
+++ b/tinker/e_announcements/templates/ea-future.html
@@ -137,7 +137,7 @@
                     $("#testResult").html(result);
                 },
                 error: function() {
-                    $("#testResult").html('the function failed.');
+                    $("#testResult").html('It didn\'t work this time, but it will work eventually.');
                 }
             })
         }
