small style changes

--- a/tinker/e_announcements/templates/ea-future.html
+++ b/tinker/e_announcements/templates/ea-future.html
@@ -16,7 +16,7 @@
                     <p class="description"> Choose a date to see upcoming E-Announcements</p>
                     <hr/>
                         <a class="btn btn-primary mr1 pikaday datepicker" id="datepicker" onchange="grabDate()">Pick A Day</a>
-                        <span id="setDate">Date</span>
+                        <span id="setDate"></span>
                 </div>
             <div class="show-ea">
 
