fixed ea grabber

--- a/tinker/e_announcements/templates/ea-future.html
+++ b/tinker/e_announcements/templates/ea-future.html
@@ -19,7 +19,7 @@
                         <span id="setDate"></span>
                 </div>
             <div class="show-ea">
-
+                E-Announcements will appear here
             </div>
         </div>
     </div>
