--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -667,3 +667,14 @@ label.checkbox {
 .show-ea {
     padding-top: 25px;
 }
+
+.ea-title {
+    font-weight:600;
+    font-size: 18px;
+    padding-top: 15px;
+}
+
+.ea-message {
+    font-size: 14px;
+    line-height: 5px;
+}
