--- a/tinker/e_announcements/templates/ea-future.html
+++ b/tinker/e_announcements/templates/ea-future.html
@@ -129,7 +129,7 @@
         function changeInfo() {
             $.ajax({
                 type: 'POST',
-                url: "/e-announcements/ea_future",
+                url: '{{ url_for("e_announcements.EAnnouncementsView:ea_future") }}',
                 data: {'dateId': $("#datepicker").val()},
                 success: function(result) {
                     $('.show-ea').html(result)
