--- a/tinker/e_announcements/templates/ea-future-ajax.html
+++ b/tinker/e_announcements/templates/ea-future-ajax.html
@@ -1,11 +1,6 @@
 <ol>
-    {%  for form in ea_display %}
-        {% if loop.index - 1 == 0 %}
-            <li class= "ea-title">{{ form|safe }}</li>
-        {% elif (loop.index - 1) % 2 == 0 %}
-            <li class="ea-title">{{ form|safe }}</li>
-        {% else %}
-            <p class="ea-message">{{ form|safe }}</p>
-        {% endif %}
+    {%  for e_announcement_dict in ea_display %}
+        <li class="ea-title"><a href="https://cms.bethel.edu/entity/open.act?id={{ e_announcement_dict['id'] }}&type=block">{{ e_announcement_dict['title']|safe }}</a></li>
+        <p class="ea-message">{{ e_announcement_dict['message']|safe }}</p>
     {% endfor %}
 </ol>
