Added Button / Misc
- Added dropdown button in the Admin Menu
- Connected calls with the config file
- refactored Config.py.dist

--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -81,6 +81,12 @@
                                     <p class="admin-list-item">Program Search Tags</p>
                                 </a>
                             </li>
+                            <li>
+                                <a href="{{ url_for('proof_points.ProofPointsView:index') }}">
+                                    <i class="fa fa-hand-pointer-o" aria-hidden="true"></i>
+                                    <p class="admin-list-item">Proof Points</p>
+                                </a>
+                            </li>
                         {% endif %}
                         <li>
                             <a href="{{ url_for('cache.CacheView:index') }}">
