User roles option in sidebar, redirects to home page

--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -70,6 +70,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="{{ url_for('user_roles.UserRolesView:index') }}">
+                                    <i class="fa fa-user-secret" aria-hidden="true"></i>
+                                    <p class="admin-list-item">User Test Roles</p>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="{{ url_for('blink_roles.BlinkRolesView:index') }}" class="button-nav">
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     <p class="admin-list-item">Blink Layout Owners</p>
